--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
     "@angular/forms": "~9.1.4",
-    "@angular/material": "^9.2.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
     "core-js": "^2.5.4",
     "json-server": "^0.16.1",
     "rxjs": "~6.3.3",
